[tool.poetry]
name = "jsonlogformatter"
version = "0.1.0"
description = "JSON formatter for python logging module"
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.971"
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
